# AVRender

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/render/: AssetUtils.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
libavrender/: build.gradle
libavrender/src/androidTest/java/com/av/render/: ExampleInstrumentedTest.kt
libavrender/src/main/cpp/: CMakeLists.txt  render_jni.cpp
libavrender/src/main/cpp/src/: common.h  egl_context.cpp  egl_context.h  gl2_plane.cpp  gl2_plane.h  gl3_box.cpp  gl3_box.h  gl3_freetype_text.cpp  gl3_freetype_text.h  gl3_light.cpp  gl3_light.h  gl3_mode_obj.cpp  gl3_mode_obj.h  gl3_plane.cpp  gl3_plane.h  gl3_sea.cpp  gl3_sea.h  gl3_sky_box.cpp  gl3_sky_box.h
libavrender/src/main/java/com/av/render/: AVRender.kt
libavrender/src/test/java/com/av/render/: ExampleUnitTest.kt
